# WhoSignedIt

./: .clippy.toml  .gitignore  Cargo.toml  README.md  group.txt  l.bash  lol.json  signature.json
src/: client.rs  error.rs  main.rs
src/cli/: mod.rs
src/client/: client.rs  generate.rs  mod.rs  verify.rs
src/crypto/: mod.rs
src/group/: mod.rs
src/proof/: mod.rs
src/services/proof/: error.rs  mod.rs  ring.rs  traits.rs  zerolink.rs
src/services/signature/: error.rs  ethereum.rs  mod.rs  solana.rs  traits.rs
