[package]
name = "WhoSignedIt"
version = "0.1.0"
edition = "2021"
authors = ["LouGel <your.email@example.com>"]
description = "Zero-knowledge group signature system"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
alloy-primitives = "0.8.23"
alloy-signer = "0.12.5"
alloy-core = "0.8.23"
alloy-sol-types = "0.8.23"
hex = "0.4.3"
thiserror = "2.0.12"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
rand = "0.9.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
alloy-signer-local = "0.12.5"
winterfell = { version = "0.12.0", features = ["concurrent"] }
ed25519-dalek ={ version = "2.1.1", features = ["pkcs8"]}
clippy = "0.0.302"
toml = "0.8.20"
solana-sdk = {version = "2.2.2", features = ["verify"]}



[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.8.0"
